--- a/lab2-1.ipynb
+++ b/lab2-1.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6f9e725a",
    "metadata": {
     "ExecuteTime": {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "1dfb7e37",
    "metadata": {
     "ExecuteTime": {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "68e77396",
    "metadata": {
     "ExecuteTime": {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "3fd43192",
    "metadata": {
     "ExecuteTime": {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "65e60c4d",
    "metadata": {
     "ExecuteTime": {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "d7e526b6",
    "metadata": {
     "ExecuteTime": {
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "4bd556fc",
    "metadata": {
     "ExecuteTime": {
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "8382af4f",
    "metadata": {
     "ExecuteTime": {
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "6028795a",
    "metadata": {
     "ExecuteTime": {
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "852d86c8",
    "metadata": {
     "ExecuteTime": {
@@ -755,7 +755,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\daher\\AppData\\Local\\Temp\\ipykernel_29912\\1937038519.py:17: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "C:\\Users\\daher\\AppData\\Local\\Temp\\ipykernel_33144\\1937038519.py:17: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  Z = Z + float(b)\n"
      ]
     },
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "id": "168f38c0",
    "metadata": {
     "ExecuteTime": {
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "id": "88d0f145",
    "metadata": {
     "ExecuteTime": {
@@ -1004,7 +1004,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\daher\\AppData\\Local\\Temp\\ipykernel_29912\\3388490972.py:67: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "C:\\Users\\daher\\AppData\\Local\\Temp\\ipykernel_33144\\3388490972.py:67: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  Z[i, h, w, c] = np.sum(a_slice_prev * weights) + float(biases)\n"
      ]
     },
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "id": "d283ac57",
    "metadata": {
     "ExecuteTime": {
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "id": "f1a2e02f",
    "metadata": {
     "ExecuteTime": {
@@ -1489,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "785c83cf",
    "metadata": {
     "ExecuteTime": {
@@ -1525,20 +1525,20 @@
     "    \"\"\"\n",
     "    \n",
     "    # Obtener info del \"cache\"\n",
-    "    (A_prev, W, b, hparameters) = cache\n",
+    "    A_prev, W, b, hparameters = cache\n",
     "    \n",
     "    # Obtener dimensiones de A_prev\n",
-    "    (m, n_H_prev, n_W_prev, n_C_prev) = A_prev.shape\n",
+    "    m, n_H_prev, n_W_prev, n_C_prev = A_prev.shape\n",
     "    \n",
     "    # Obtener dimensiones de W\n",
-    "    (f, f, n_C_prev, n_C) = W.shape\n",
+    "    f, f, n_C_prev, n_C = W.shape\n",
     "    \n",
     "    # Obtener información de los hiperparametros (hparameters)\n",
     "    stride = hparameters[\"stride\"]\n",
     "    pad = hparameters[\"pad\"]\n",
     "    \n",
     "    # Obtener dimensiones de dZ\n",
-    "    (m, n_H, n_W, n_C) = dZ.shape\n",
+    "    m, n_H, n_W, n_C = dZ.shape\n",
     "    \n",
     "    # Init variables\n",
     "    dA_prev = np.zeros((m, n_H_prev, n_W_prev, n_C_prev))                              \n",
@@ -1546,8 +1546,6 @@
     "    db = np.zeros((1, 1, 1, n_C))\n",
     "    \n",
     "    \n",
-    "    \n",
-    "\n",
     "    # Agregar padding a  A_prev y dA_prev\n",
     "    A_prev_pad = zero_pad(A_prev, pad)\n",
     "    dA_prev_pad = zero_pad(dA_prev, pad)\n",
@@ -1557,10 +1555,8 @@
     "        \n",
     "        # Aprox 2 lineas para\n",
     "        # seleccionar el i-th ejemplo de entrenamiento de A_prev y dA_prev_pad\n",
-    "        # a_prev_pad =\n",
-    "        # da_prev_pad = \n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        a_prev_pad = A_prev_pad[i]\n",
+    "        da_prev_pad = dA_prev_pad[i] \n",
     "        \n",
     "        # Repetimos los loops de los pasos forward\n",
     "        # Iteramos sobre el eje vertical (n_H)\n",
@@ -1572,34 +1568,26 @@
     "                    \n",
     "                    # Aprox 4 linea para\n",
     "                    # Encontrar las orillas de la ventana actual (slice) similar a como se hizo antes\n",
-    "                    # vert_start =\n",
-    "                    # vert_end =\n",
-    "                    # horiz_start = \n",
-    "                    # horiz_end =\n",
-    "                    # YOUR CODE HERE\n",
-    "                    raise NotImplementedError()\n",
+    "                    vert_start = h * stride\n",
+    "                    vert_end = vert_start + f\n",
+    "                    horiz_start =  w * stride\n",
+    "                    horiz_end = horiz_start + f\n",
     "                    \n",
     "                    # Aprox 1 linea de codigo para\n",
     "                    # Usar las orillas para definir el slice (ventana) de a_prev_pad\n",
-    "                    # a_slice = \n",
-    "                    # YOUR CODE HERE\n",
-    "                    raise NotImplementedError()\n",
+    "                    a_slice = a_prev_pad[vert_start:vert_end, horiz_start:horiz_end, :] \n",
     "\n",
     "                    # Update gradients for the window and the filter's parameters using the code formulas given above\n",
     "                    # Aprox 3 lineas para\n",
     "                    # Actualizar gradientes para la ventana y los params del filtro usando las formulas de arriba\n",
-    "                    # da_prev_pad[vert_start:vert_end, horiz_start:horiz_end, :] +=\n",
-    "                    # dW[:,:,:,c] +=\n",
-    "                    # db[:,:,:,c] += \n",
-    "                    # YOUR CODE HERE\n",
-    "                    raise NotImplementedError()\n",
+    "                    da_prev_pad[vert_start:vert_end, horiz_start:horiz_end, :] += W[:,:,:,c] * dZ[i, h, w, c]\n",
+    "                    dW[:,:,:,c] += a_slice * dZ[i, h, w, c]\n",
+    "                    db[:,:,:,c] += dZ[i, h, w, c] \n",
     "\n",
     "        # Aprox 1 linea para\n",
     "        # Settear el dA_prev del i-th ejemplo de entrenamiento a un da_prev_pad sin padding\n",
     "        # Considere usar X[pad:-pad, pad:-pad, :]\n",
-    "        # dA_prev[i, :, :, :] =\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        dA_prev[i, :, :, :] = da_prev_pad[pad:-pad, pad:-pad, :]\n",
     "    \n",
     "    # Asegurandose que la forma es la correcta\n",
     "    assert(dA_prev.shape == (m, n_H_prev, n_W_prev, n_C_prev))\n",
@@ -1609,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "38166996",
    "metadata": {
     "ExecuteTime": {
@@ -1630,7 +1618,65 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dA_mean = 1.7587047105903002\n",
+      "dW_mean = -30.84696464944312\n",
+      "db_mean = 163.5455610593757\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "np.random.seed(seed_)\n",
     "\n",
