✅ feat: Exercise 6, part 1 completed

--- a/lab2-1.ipynb
+++ b/lab2-1.ipynb
@@ -1745,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "90d377c6",
    "metadata": {
     "ExecuteTime": {
@@ -1778,16 +1778,14 @@
     "    \n",
     "    \"\"\"\n",
     "    # Aprox 1 linea para\n",
-    "    # mask =\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    mask = (x == np.max(x)).astype(int)\n",
     "    \n",
     "    return mask"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "23f81088",
    "metadata": {
     "ExecuteTime": {
@@ -1808,7 +1806,34 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x =  [[ 0.71167353 -0.32448496 -1.00187064]\n",
+      " [ 0.23625079 -0.10215984 -1.14129263]]\n",
+      "mask =  [[1 0 0]\n",
+      " [0 0 0]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "np.random.seed(seed_)\n",
     "x = np.random.randn(2,3)\n",
@@ -1857,7 +1882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "9e554a20",
    "metadata": {
     "ExecuteTime": {
@@ -1891,18 +1916,16 @@
     "    \"\"\"\n",
     "    \n",
     "    # Aprox 3 lieneas para\n",
-    "    # (n_H, n_W) = \n",
-    "    # average = \n",
-    "    # a =\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    n_H, n_W = shape \n",
+    "    average = dz / (n_H * n_W) \n",
+    "    a = np.full((n_H, n_W), average)\n",
     "    \n",
     "    return a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "876a3800",
    "metadata": {
     "ExecuteTime": {
@@ -1923,7 +1946,44 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "valor distribuido = [[0.10204082 0.10204082 0.10204082 0.10204082 0.10204082 0.10204082\n",
+      "  0.10204082]\n",
+      " [0.10204082 0.10204082 0.10204082 0.10204082 0.10204082 0.10204082\n",
+      "  0.10204082]\n",
+      " [0.10204082 0.10204082 0.10204082 0.10204082 0.10204082 0.10204082\n",
+      "  0.10204082]\n",
+      " [0.10204082 0.10204082 0.10204082 0.10204082 0.10204082 0.10204082\n",
+      "  0.10204082]\n",
+      " [0.10204082 0.10204082 0.10204082 0.10204082 0.10204082 0.10204082\n",
+      "  0.10204082]\n",
+      " [0.10204082 0.10204082 0.10204082 0.10204082 0.10204082 0.10204082\n",
+      "  0.10204082]\n",
+      " [0.10204082 0.10204082 0.10204082 0.10204082 0.10204082 0.10204082\n",
+      "  0.10204082]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "a = distribute_value(5, (7,7))\n",
     "print('valor distribuido =', a)\n",
