--- a/lab2-1.ipynb
+++ b/lab2-1.ipynb
@@ -2019,7 +2019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "20621e64",
    "metadata": {
     "ExecuteTime": {
@@ -2055,7 +2055,7 @@
     "\n",
     "\n",
     "    # Obtener info del cache\n",
-    "    (A_prev, hparameters) = cache\n",
+    "    A_prev, hparameters = cache\n",
     "    \n",
     "    # Obtener info de \"hparameters\"\n",
     "    stride = hparameters[\"stride\"]\n",
@@ -2073,9 +2073,7 @@
     "        \n",
     "        # Aprox 1 linea para\n",
     "        # seleccionar el ejemplo de entrenamiento de A_prev\n",
-    "        # a_prev = \n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        a_prev = A_prev[i]\n",
     "        \n",
     "        # Iterar sobre lo vertical (n_H)\n",
     "        for h in range(n_H):                   \n",
@@ -2086,36 +2084,30 @@
     "                    \n",
     "                    # Aprox 4 linea para\n",
     "                    # Encontrar las orillas de la ventana actual (slice) similar a como se hizo antes\n",
-    "                    # vert_start =\n",
-    "                    # vert_end =\n",
-    "                    # horiz_start = \n",
-    "                    # horiz_end =\n",
-    "                    # YOUR CODE HERE\n",
-    "                    raise NotImplementedError()\n",
+    "                    vert_start = h * stride\n",
+    "                    vert_end = vert_start + f\n",
+    "                    horiz_start = w * stride\n",
+    "                    horiz_end = horiz_start + f\n",
     "                    \n",
     "                    # Calcular backward prop para ambos modos\n",
     "                    if mode == \"max\":\n",
     "                        \n",
     "                        # Aprox 3 lineas para\n",
     "                        # Usar las orillas y \"c\" para definir el slice actual de a_prev\n",
-    "                        # a_prev_slice = \n",
+    "                        a_prev_slice = a_prev[vert_start:vert_end, horiz_start:horiz_end, c] \n",
     "                        # Crear una mascara desde a_prev_slice\n",
-    "                        # mask = \n",
+    "                        mask = create_mask_from_window(a_prev_slice) \n",
     "                        # Setear dA_prev para ser dA_prev + (la mascara multiplciada por la entrada correcta de dA)\n",
-    "                        # dA_prev[i, vert_start:vert_end, horiz_start:horiz_end, c] +=\n",
-    "                        # YOUR CODE HERE\n",
-    "                        raise NotImplementedError()\n",
-    "                        \n",
+    "                        dA_prev[i, vert_start:vert_end, horiz_start:horiz_end, c] += np.multiply(mask, dA[i, h, w, c])\n",
+    "\n",
     "                    elif mode == \"average\":\n",
     "                        # Aprox 3 lineas para\n",
     "                        # Obtener los valores de dA\n",
-    "                        # da = \n",
+    "                        da = dA[i, h, w, c] \n",
     "                        # Definir la forma del filtro fxf\n",
-    "                        # shape =\n",
+    "                        shape = (f,f)\n",
     "                        # Distribuirlo para obtener el tamaño correcto de dA_prev (sume el valod distribuido de da)\n",
-    "                        # YOUR CODE HERE\n",
-    "                        raise NotImplementedError()\n",
-    "                        \n",
+    "                        dA_prev[i, vert_start:vert_end, horiz_start:horiz_end, c] += distribute_value(da, shape)                        \n",
     "\n",
     "    # Asegurandose que la forma de la salida sea correcta\n",
     "    assert(dA_prev.shape == A_prev.shape)\n",
@@ -2125,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "869852be",
    "metadata": {
     "ExecuteTime": {
@@ -2146,7 +2138,64 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5, 4, 2, 2)\n",
+      "mode = max\n",
+      "mean of dA =  0.10390017715645054\n",
+      "dA_prev[1,1] =  [[ 1.24312631  0.        ]\n",
+      " [ 0.         -1.05329248]\n",
+      " [-1.03592891  0.        ]]\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mode = average\n",
+      "mean of dA =  0.10390017715645054\n",
+      "dA_prev[1,1] =  [[ 0.31078158  0.10580814]\n",
+      " [ 0.30923847 -0.2046901 ]\n",
+      " [-0.00154311 -0.31049824]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "np.random.seed(seed_)\n",
     "A_prev = np.random.randn(5, 5, 3, 2)\n",
