✍️ feat: Questions from Part 1 answered

--- a/lab2-1.ipynb
+++ b/lab2-1.ipynb
@@ -3032,8 +3032,14 @@
     "\n",
     "**NOTA:** Conteste como txt, pdf, comentario en la entrega o en este mismo notebook:\n",
     "* ¿Por qué creen que es el mal rendimiento de este modelo?\n",
-    "* ¿Qué pueden hacer para mejorarlo?\n",
+    "  Debido a que es una arquitectura simple, cuenta solo con una capa convolucional cuando podría requerirse más. También podría radicar en la cantidad de filtros, se podría aumentar la cantidad para mejorar. Por otra parte, la inicializacion de los pesos se hace con valores muy pequeños, lo que podría provocar que las gradientes sean pequeñas durante el entrenamiento. \n",
+    "  \n",
+    "* ¿Qué pueden hacer para mejorarlo? \n",
+    "  Podríamos aumentar la profundidad de red agregando más capas, tanto convolucionales como de pooling, usar una mayor cantidad de filtros y optimizar parametros como el learning rate o algunos de inicialización.\n",
+    "  \n",
     "* ¿Cuáles son las razones para que el modelo sea tan lento?\n",
+    "  Una razón se debe a que está implementando con funciones diseñadas con fines didacticos para el entendimiento del funcionamiento del algoritmo. Otra razones radican en que no se está aprovechando la posible paralelización de algunas partes y que las funciones implementadas son básicas respecto a librerias especializadas con este fin.\n",
+    "\n",
     "\n",
     "Ahora pasemos a ver como hacer algo mejor para el mismo tipo de tarea usando PyTorch &#x1F60A;\n",
     "\n",
